--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,8 +4,12 @@
 }
 
 .card {
-padding: 15px;
-
+    background-image: radial-gradient(circle, #70898e, #94a4ac, #b9c1c8, #dddfe4, #ffffff);
+    max-width: 18rem;
+    margin: 8px;  
+    -webkit-box-shadow: 0px 0px 11px 5px #142C57; 
+    box-shadow: 0px 0px 11px 5px #142C57;
+   
 }
 
 .fondeando {
@@ -21,17 +25,122 @@ padding: 15px;
 body {
     background-color: black;
           max-width: 1980px;
-   
+          max-width: 1980px;
+
+        }        
+body section#mvp div#mvpfecha img {
+    text-align: center;
 }
 .noticias {
         justify-content: center;
     
 }
 
+/* Inicio Sección Jugadores de la Fecha */
+
+section#mvp {
+    
+    margin-top: 10px;
+    background-color: #000;
+}
+
+section#mvp div#mvpfecha {
+    margin-top: 10px;
+    background-color: #000;
+    display: flex;
+    justify-content: space-around; 
+    flex-wrap: wrap;    
+    
+
+}
+
+section#mvp div#mvpfecha article {
+    width: 15rem;    
+    height:auto;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 11px 5px #142C57; 
+    box-shadow: 0px 0px 11px 5px #142C57;
+    margin-top: 20px;
+    
+
+}
+section#mvp div#mvpfecha article p {
+   
+    color: #ffffff;
+    margin: 4px;
+    font-size: 14px;
+
+}
+ 
+section#mvp div#mvpfecha article img {
+    width: 60%;
+    height: auto;
+    border-radius: 10px;
+    margin-top: 7px;
+    text-align: center;
+    
+}
+
+section#mvp div#mvpfecha article h3 {
+    text-align: center;
+    color: #2fa72f;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
+    line-height: break-word;
+    margin: 4px;
+}
+/* fin sección jugadores de la Fecha */
+
+/* Styling seccion reglamento */
+
+.rules {
+   
+    background-color: #111111;
+    border-radius: 7px;
+    max-height: 500px;
+    max-width: 800px;
+    text-align: justify;
+    padding: 8px;
+    margin-right: 4px;
+    overflow: scroll;
+    overflow-x: hidden;
+    scroll-padding: 1px;
+    
+  
+}
+section#reglamento p {
+  
+    font-family: roboto; 
+    color: #ffffff;
+    margin: 4px;
+    font-size: 13px;
+    text-align: justify;
+
+}
+section#reglamento h3 {
+    text-align: center;
+    color: #2fa72f;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
+    line-height: break-word;
+    margin: 4px;
+}
+ 
+section#reglamento h4 {
+    color: #314ca3;
+    font-size: 14px;
+    font-family: roboto;
+    margin: 4px;
+
+}
+
+
+
+
+/* fin styling reglamento */
+
 
 /* Comienzo formato y efectos menu y footer */
-
-
 
 .fondo {
     
@@ -75,6 +184,7 @@ header nav ul li {
 }  
 
 footer nav ul li {
+    margin-top: 10px;
     width: 100px;
     display: inline-block;
     text-align: center;
