--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,13 +19,27 @@ body {
     background-image: url("../img/fondo.jpg");
     background-repeat: no-repeat;
     width: 100%;
-    height: 275px;
+    height: 290px;
     text-align: center;
     padding: 0;
     border: 0;
 }
 
+.animacion {
 
+    animation: anime 1s ease 0s 1 normal forwards;
+    
+} 
+
+@keyframes anime {
+	0% {
+		transform: scale(0);
+	}
+
+	100% {
+		transform: scale(1);
+	}
+}
 
 .noticias {
         justify-content: center;
@@ -198,18 +212,6 @@ li.social {
     text-align: center;
 
 } 
-.logo {
-    background-image: url("../img/fondo.png");
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 295px;
-    text-align: center;
-    padding: 0;
-    border: 0;
-}
-.logo img {
-    max-height: 280px;
-}
 
 ul.footer {
     list-style: none; 
@@ -220,9 +222,11 @@ ul.footer {
 }
 /* fin formato y efectos menu y footer */
 
+
+
 /*Media Query para alinear texto del Sandwich del Menu, segun ancho de pantalla */
 
-@media (min-width: 992px) {
+@media (min-width: 840px) {
 
     li.text-left {
         text-align: center!important;}
